--- a/nilfs2_ss_manager/Makefile
+++ b/nilfs2_ss_manager/Makefile
@@ -1,5 +1,4 @@
 INSTALL = install
-UPSTART = $(shell test -d /etc/init && echo upstart)
 
 all:
 	@echo "'make install' to install scripts"
@@ -7,13 +6,4 @@ all:
 install:
 	python setup.py install
 	$(INSTALL) -d $(DEST)/etc/
-	$(INSTALL) -d $(DEST)/etc/default
-	$(INSTALL) default/nilfs $(DEST)/etc/default
-	$(INSTALL) -d $(DEST)/etc/init.d
-ifeq ($(UPSTART), upstart)
-	$(INSTALL) -d $(DEST)/etc/init
-	$(INSTALL) -m 0644 init/nilfs.conf $(DEST)/etc/init
-	test -e $(DEST)/etc/init.d/nilfs || ln -s $(DEST)/lib/init/upstart-job $(DEST)/etc/init.d/nilfs
-else
-	$(INSTALL) init.d/nilfs $(DEST)/etc/init.d
-endif
+	$(INSTALL) systemd/system/nilfs.service $(DEST)/etc/systemd/system
