--- a/nilfs2_ss_manager/systemd/system/nilfs.service
+++ b/nilfs2_ss_manager/systemd/system/nilfs.service
@@ -1,10 +1,13 @@
 [Unit]
 Description=This script initiates or shuts down nilfs snapshot manager.
 After=syslog.target
+ConditionFileNotEmpty=/etc/nilfs.conf
 
 [Service]
-ExecStart=/usr/local/bin/nilfs2_ss_manager
-Type=forking
+Type=simple
+PIDFile=/var/run/nilfs.ss.pid
+ExecStart=/usr/local/bin/nilfs2_ss_manager --pidfile /var/run/nilfs.ss.pid
+RestartSec=2
 
 [Install]
 WantedBy=multi-user.target
