--- a/nilfs2_ss_manager/systemd/system/nilfs.service
+++ b/nilfs2_ss_manager/systemd/system/nilfs.service
@@ -7,6 +7,7 @@ ConditionFileNotEmpty=/etc/nilfs_ss.conf
 Type=simple
 PIDFile=/var/run/nilfs.ss.pid
 ExecStart=/usr/local/bin/nilfs2_ss_manager --pidfile /var/run/nilfs.ss.pid
+ExecStop=/bin/kill -s TERM $MAINPID
 RestartSec=2
 
 [Install]
